<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="electrum">Electrum</string>
    <string name="silver">Silver</string>
    <string name="copper">Copper</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
