<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/money"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/money_platinum"
            android:text="@string/platinum"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <TextView
            android:id="@+id/money_gold"
            android:text="@string/gold"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <TextView
            android:id="@+id/money_electrum"
            android:text="@string/electrum"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <TextView
            android:id="@+id/money_silver"
            android:text="@string/silver"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <TextView
            android:id="@+id/money_copper"
            android:text="@string/copper"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

</LinearLayout>